--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore simplecov coverage files
+/coverage
+
+# Desktop Service Store
+/.DS_Store
